# qingguan_backend

./: .env.example  .gitignore  666.py  address_get.py  auto_or.py  decret.js  email_ip_auto.py  fedex_ups_schedule_download copy.py  graph.py  hello2.py  main.py  main_mongo.py  min_tax_money.py  model.conf  morelink_api.py  morelink_output_excel_client.py  output_data.py  pyproject.toml  requirements.txt  setting.py  sync_mongo.py  test.py  test2.py  test4.py  test_permission_api.py  update_mongo_data.py  vba.py  vba_server.py  vba_test.py  时颖买单资料模块.xlsm
AsposeCells_net/: text.py
AsposeCells_net/net40/: Aspose.Cells.xml
AsposeCells_net/net6.0/: Aspose.Cells.xml
AsposeCells_net/net8.0-windows7.0/: Aspose.Cells.xml
JAVA-Aspose.Excel-24.7/: license.xml
app/: casbin_new_func.py  db.py  db_mongo.py  middleware.py  models.py  schemas.py  utils.py  utils_aspose.py
app/apis/: api.py  casbin_policy.py  department.py  excel_preview.py  menu.py  order.py  permission_item.py  role.py  user.py  web_vba.py  web_vba_mongo.py
app/dadan/: models.py
app/hubs_new_morelink/: hubs_client.py  new_molink_decrypt.py  remotecheck.py  schemas.py  smarty.py  upload.py
app/qingguan/: utils.py
fentan/: __init__.py  close_fentan.py  guangzhou_hangjie_aspose.py  shanghai_pingzheng_aspose.py
file/remoteaddresscheck/: DAS_Contiguous_Extended_Remote_Alaska_Hawaii_2025.pdf.json  DAS_Contiguous_Extended_Remote_Alaska_Hawaii_20250702.xlsx.json
rpa_tools/: __init__.py  chrome_tools.py  email_tools.py  excel_tools.py  setting.ini  wechat_ocr_tools.py
spire_crack/: Spire.Pdf.XML
(+40 files in other folders)
